Fix regression for sqlops module and update notebook links

--- a/3_newdatabase.ipynb
+++ b/3_newdatabase.ipynb
@@ -1,13 +1,20 @@
 {
     "metadata": {
         "kernelspec": {
-            "name": "SQL",
-            "display_name": "SQL",
-            "language": "sql"
+            "name": "python3",
+            "display_name": "Python 3"
         },
         "language_info": {
-            "name": "sql",
-            "version": ""
+            "name": "python",
+            "version": "3.6.6",
+            "mimetype": "text/x-python",
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "pygments_lexer": "ipython3",
+            "nbconvert_exporter": "python",
+            "file_extension": ".py"
         }
     },
     "nbformat_minor": 2,
@@ -25,7 +32,19 @@
         },
         {
             "cell_type": "markdown",
-            "source": "\n## Walkthrough: Writing the New Database extension\n\n### 1. Define new command\n\n#### package.json\n* Add a command `newdatabase.createdb`\n* Show in on right-click if we're on the Databases node\n\n```json\n\n\"activationEvents\": [\n    \"onCommand:newdatabase.createdb\"\n],\n\"contributes\": {\n    \"commands\": [\n        {\n            \"command\": \"newdatabase.createdb\",\n            \"title\": \"New Database\"\n        }\n    ],\n    \"menus\": {\n        \"objectExplorer/item/context\": [\n            {\n                \"command\": \"newdatabase.createdb\",\n                \"when\": \"connectionProvider == MSSQL && nodeType && nodeType == Folder && nodeLabel=~/^Databases$/\",\n                \"group\": \"1data1\"\n            }\n        ]\n    },\n    \"keybindings\": [\n        {\n            \"command\": \"newdatabase.createdb\",\n            \"key\": \"Ctrl+Shift+d b\"\n        }\n    ]\n},\n```\n",
+            "source": "\n## Walkthrough: Writing the New Database extension\n",
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "source": "!code ./3-newdatabase/",
+            "metadata": {},
+            "outputs": [],
+            "execution_count": 1
+        },
+        {
+            "cell_type": "markdown",
+            "source": "\n### 1. Define new command\n\n#### package.json\n* Add a command `newdatabase.createdb`\n* Show in on right-click if we're on the Databases node\n\n```json\n\n\"activationEvents\": [\n    \"onCommand:newdatabase.createdb\"\n],\n\"contributes\": {\n    \"commands\": [\n        {\n            \"command\": \"newdatabase.createdb\",\n            \"title\": \"New Database\"\n        }\n    ],\n    \"menus\": {\n        \"objectExplorer/item/context\": [\n            {\n                \"command\": \"newdatabase.createdb\",\n                \"when\": \"connectionProvider == MSSQL && nodeType && nodeType == Folder && nodeLabel=~/^Databases$/\",\n                \"group\": \"1data1\"\n            }\n        ]\n    },\n    \"keybindings\": [\n        {\n            \"command\": \"newdatabase.createdb\",\n            \"key\": \"Ctrl+Shift+d b\"\n        }\n    ]\n},\n```\n",
             "metadata": {}
         },
         {
